# secretKeeper

./: .dockerignore  .env.example  .env.rabbitmq.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  __init__.py  celery.py  celeryconfig.py  config.py  pyproject.toml  tasks.py
app/common/api/: bitbucket_api.py
app/common/core/: db_task.py
app/common/exceptions/: repo_not_found_exception.py
app/common/git/: abstract_git_api_wrapper.py  abstract_git_data.py  abstract_git_permissions.py  abstract_git_service.py
app/common/git/bitbucket/: bitbucket_api_wrapper.py  bitbucket_git_data.py  bitbucket_git_service.py
app/common/git/github/: github_api_wrapper.py  github_git_data.py  github_git_service.py  github_permissions.py
app/common/notification/: abstract_notification.py  microsoft_teams_notification.py
app/common/secrets/: process_secret_sources.py
app/common/secrets/sources/: abstract_secrets_source.py  hc_vault_api.py
app/config/: default.yml  example_config.yml  gitleaks.toml
app/email/templates/: new_repo_and_project.html.j2  vuln_summary.html.j2
app/runners/: __init__.py
app/runners/checkers/: abstract_checker.py
app/runners/checkers/bitbucket/: bitbucket_checker.py
app/runners/fetchers/: abstract_fetcher.py  branches_fetcher.py  permissions_fetcher.py  settings_fetcher.py
app/runners/notifications/: tasks.py
app/runners/processors/: abstract_processor.py  leaks_processor.py  run_processors.py  sonarqube_processor.py
app/tests/: conftest.py  pytest.ini
app/tests/leaks/: leak_report_example.json  leaks_update.py
app/utils/: helper.py  notifications.py  tools.py
app/webhook/: tasks.py
common/: __init__.py  (+1 more)
(+40 files in other folders)
