[tool.poetry]
name = "SecretKeeper"
version = "1.0.0"
description = ""
authors = ["Michael Atkinson <michael.atkinson@sicpa.com>"]
readme = "README.md"
packages = [{ include = "app", from = "./app" }]

[tool.poetry.dependencies]
python = "^3.12"
secretkeeper-app = { path = "./app", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | migrations
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
