[tool.poetry]
name = "secretkeeper-app"
version = "1.0.0"
description = "secretkeeper tool"
authors = ["Michael Atkinson <michael.atkinson@sicpa.com>"]

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.3"
invoke = "^2.0.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
PyYAML = "^6.0"
requests = "^2.28.1"
dateparser = "1.2.0"
giturlparse = "^0.12.0"
PyGithub = "^2.0.0"
hvac = "^2.0.0"
schedule = "^1.1.0"
GitPython = "^3.1.27"
celery = "^5.2.7"
SQLAlchemy-Utils = "^0.41.1"
jinja2 = "^3.1.2"
jproperties = "^2.1.1"
apprise = "^1.9.0"


[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
pre-commit = "^3.6.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
